--- a/_site.yml
+++ b/_site.yml
@@ -14,14 +14,14 @@ navbar:
   right:
     - text: "Home"
       href: index.html
-    - text: "Gigabot"
-      href: 01-Gigabot.html      
-    - text: "References"
-      href: 00-References.html
+#    - text: "Gigabot"
+#      href: 01-Gigabot.html      
+#    - text: "References"
+#      href: 00-References.html
 output:
   distill::distill_article:
     toc: true
     toc_depth: 2
-#exclude: ["slides/"]
+include: ["slides/"]
 
 #exclude: ["README.md"]
